--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
@@ -85,6 +85,23 @@
             page: Section1;
         }
         -- ></style>
+
+
+<script type="text/javascript">
+
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-27890676-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-
+analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+
+</script>
+
 </head>
 
 <body topmargin="0" leftmargin="0" onload="pageLoadSetHeaderImages('[CATEGORYPATH_NOLINKS]');" rightmargin="0" bottommargin="0">
