--- a/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
+++ b/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
@@ -29,21 +29,21 @@ div.Section1
 					<div align="center">
 						<table border="0" width="1004" id="table94" cellspacing="0" cellpadding="0">
 							<tr>
-								<td align="left" width="505">¡¡</td>
-								<td align="left" width="1000">¡¡</td>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"></td>
 							</tr>
 							<tr>
-								<td align="left" width="505">¡¡</td>
+								<td align="left" width="505"></td>
 								<td align="left" width="1000"><font size="4"><b>
 								<i>Griffbänder</i></b></font><i><b><font size="4"> 
 								/ Tennis Grips</font></b></i></td>
 							</tr>
 							<tr>
-								<td align="left" width="505">¡¡</td>
-								<td align="left" width="1000">¡¡</td>
+								<td align="left" width="505"></td>
+								<td align="left" width="1000"></td>
 							</tr>
 							<tr>
-								<td align="left" width="505">¡¡</td>
+								<td align="left" width="505"></td>
 								<td align="left" width="1000"><br>
                                 <b><font color="#FF0000">
                                 &nbsp;</font></b><i><font color="#CB0C04" size="4"><b>Bitte 
@@ -56,7 +56,7 @@ div.Section1
 													<td>
 													<table id="table98" border="0" cellSpacing="0" cellPadding="0" width="100%">
 														<tr>
-															<td vAlign="top" width="200">¡¡</td>
+															<td vAlign="top" width="200"></td>
 														</tr>
 													</table>
 													</td>
@@ -110,7 +110,7 @@ div.Section1
 										Grips</a></div>
 								</div>
 								<div class="category">
-									¡¡</div>
+									</div>
 								<table border="0" width="100%" id="table102">
 									<tr>
 										<td>
@@ -185,7 +185,7 @@ div.Section1
 								</table>
 								</font></b>
 								<p><font color="#CB0C04"><br>
-¡¡</font></td>
+</font></td>
 							</tr>
 							</table>
 					</div>
