--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_Griffbänder_head.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_Griffbänder_head.htm
@@ -1,2 +1,3 @@
-<meta name="description" content="Riesenauswahl an hochwertigen Griffbändern mit EU-weiter Bestpreisgarantie!" />
-<meta name="keywords" content="Griffbänder" />
+<meta name="description" lang="de" content="Riesenauswahl an hochwertigen Griffbändern mit EU-weiter Bestpreisgarantie!" />
+<meta name="keywords" lang="de" content="Griffbänder, Overgrip, tennis griffbänder, tennis griffband, griffband tennis, griffbänder badminton, griffbänder tennis, tennisschläger griffband,
+Griffband, Basic Grips" />
