--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
@@ -3,6 +3,7 @@
     <title>[SHOP_TITLE]</title>
     <meta name="author" content="Arfaian Export-Import HandelsGesmbH, Fröbelstrasse 24, 4020 Linz">
     [EMBED:template_[CATEGORYNAME]_head.htm]
+    [EMBED:template_categorynr_[CATEGORYNR]_head.htm]
     <link rel="shortcut icon" href="http://www.arfaian.com/favicon.ico" />
     <link rel="icon" href="http://www.arfaian.com/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="skins/skin_arfaian_2009/pages/style.css" type="text/css" />
