--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/index.htm
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/index.htm
@@ -1,7 +1,10 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>WELCOME</title>
+    <title>WELCOME TO WWW.ARFAIAN.COM</title>
+    <meta name="description" lang="de" content="Riesenauswahl an hochwertigen Tennisartikel mit EU-weiter Bestpreisgarantie!" />
+    <meta name="keywords" lang="de" content="Tennisschläger, tennisschlaeger, Kinderschläger, tennisschläger für kinder, Kinderrackets, tenisschläger, turnierracket, Kindertennisschläger, Tennis Rackets, tennis schläger, günstige tennisschläger, billige tennisschläger, tennisschläger günstig kaufen, turnierrackets tennis" />
+    <meta name="author" content="Arfaian Export-Import HandelsGesmbH, Fröbelstrasse 24, 4020 Linz">
 </head>
 <body>
 <div><center> 
